--- a/secondChance-backend/.env.sample
+++ b/secondChance-backend/.env.sample
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb://root:password_of_mongodb_instance@localhost:27017
+MONGO_URL=mongodb://root:c2mw3ZtajRLc91kMFVhZxFX5@172.21.79.73:27017
 JWT_SECRET=setasecret
 
 MONGO_DB=secondChance
